fixing svg background image cropping in Firefox (no using auto size one dimension)

--- a/packrat/styles/keeper/keep_box.less
+++ b/packrat/styles/keeper/keep_box.less
@@ -270,7 +270,6 @@
 .kifi-keep-box-lib {
   display: block;
   border-bottom: 1px solid @lib-border-color;
-  background: 13px center / auto @lib-bg-height no-repeat;
   height: @lib-height;
   line-height: @lib-height;
   font-size: @lib-font-size;
