--- a/packrat/styles/keeper/keeper.less
+++ b/packrat/styles/keeper/keeper.less
@@ -165,7 +165,7 @@
     height: 12px;
     margin-right: 7px;
     vertical-align: -2px;
-    background-size: 16px auto;
+    background-size: 16px 12px;
     background-repeat: no-repeat;
   }
   &.kifi-unkept {
@@ -197,7 +197,7 @@
       height: 13px;
       margin-right: 7px;
       vertical-align: -1px;
-      background-size: 10px auto;
+      background-size: 10px 13px;
     }
     &::after {
       content: 'Kept Private';
